# fb2parser

./: .gitignore  README.md  pyproject.toml
fb2parser/: __init__.py  constants.py
fb2parser/lang/: fb2_parser.pot  ru.mo  ru.po
